--- a/web/views/_layout.pug
+++ b/web/views/_layout.pug
@@ -15,13 +15,6 @@ html(lang='en')
     include _favicon
     block header_exts
   body#ibm-com.ibm-type
-    #ibm-top.ibm-landing-page
-        #ibm-mast-options
-          ul(role='toolbar', aria-labelledby='ibm-masthead')
-        #ibm-universal-nav
-          #ibm-home
-            a(href='/') IBM&reg;
-          ul#ibm-menu-links(role='toolbar', aria-label='Site map')
     #ibm-content-wrapper
       header
         .ibm-sitenav-menu-container
@@ -61,12 +54,12 @@ html(lang='en')
                 block content
       footer
         .ibm-columns.ibm-padding-content
+          #ibm-footer-locale-selector.ibm-col-4-1.ibm-col-medium-4-2.ibm-fright(style='padding-top: 20px;')
             h3.ibm-bold Select a country/region:
             select#region-selector(style='width: 100%;')
               option(value='', selected) &nbsp;
               option(value='en') English
               option(value='de') Deutsch
-        #ibm-footer
 
     #block-explorer
     script(src='/js/block-explorer.bundle.js')
