--- a/web/views/_layout.pug
+++ b/web/views/_layout.pug
@@ -55,7 +55,7 @@ html(lang='en')
       footer
         .ibm-columns.ibm-padding-content
           #ibm-footer-locale-selector.ibm-col-4-1.ibm-col-medium-4-2.ibm-fright(style='padding-top: 20px;')
-            h3.ibm-bold Select a country/region:
+            h3.ibm-bold 选择语言:
             select#region-selector(style='width: 100%;')
               option(value='', selected) &nbsp;
               option(value='en') English
