--- a/web/views/_layout.pug
+++ b/web/views/_layout.pug
@@ -59,7 +59,7 @@ html(lang='en')
             select#region-selector(style='width: 100%;')
               option(value='', selected) &nbsp;
               option(value='en') English
-              option(value='ch') Chinese
+              option(value='de') Chinese
 
     #block-explorer
     script(src='/js/block-explorer.bundle.js')
